# corp-finance-monitor

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  KNOWLEDGE.md  Makefile  PLAN.md  README.md  config.yaml  docker-compose.override.yml  docker-compose.yml  main.py  pyproject.toml
.github/: branch-protection.md
.github/workflows/: ci.yml  docker.yml
deploy/: VARIABLES.md  config.yaml.example  deploy.sh  smoke_test.sh
deploy/ansible/: inventory  playbook.yml
deploy/systemd/: README.md  cfm-api.service.in  cfm-sync.service.in  cfm-sync.timer.in
docs/: ARCHITECTURE.md  DEPLOY_VERIFICATION.md  DEVELOPMENT.md  ROLLBACK.md  TAILSCALE_SERVE.md
frontend/: Dockerfile  Dockerfile.ci  README.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: index.css  main.tsx
frontend/src/app/: router.tsx  (+3 more)
ops/: README.md  __init__.py
ops/scripts/: __init__.py  list_services.py  update_release_repo.py
ops/services/: corp-finance-monitor-backend.yaml  (+2 more)
scripts/: build_wheelhouse.sh  pre-commit.sh  quick-test.sh  review-gate.sh  setup_tailscale_serve.sh  targeted-gate.sh  verify_deploy.sh  verify_tailscale_serve.sh
tests/: README.md  conftest.py  test_api_smoke.py  test_cninfo_classification.py  test_cninfo_full_market.py  test_deploy_artifacts.py  test_disk_storage_pagination.py  test_e2e_deployed.py  test_engine_concurrency.py  test_fetch_filter.py  test_hkex_full_market.py  test_hkex_integration.py  test_hkex_registry.py  test_release_contract.py  test_scan_checkpoint.py  test_scheduling.py  test_sqlite_state_concurrency.py  test_stock_registry.py
(+55 files in other folders)
