[project]
name = "corp-finance-monitor"
version = "0.1.0"
description = "企业财报发现与更新系统 — Corporate Financial Report Discovery & Update Engine"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28",
    "pyyaml>=5.4",
    "fastapi>=0.100",
    "uvicorn>=0.20",
]

[project.scripts]
cfm = "corp_finance_monitor.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/corp_finance_monitor"]

[tool.uv]
managed = true
