[project]
name = "corp-finance-monitor"
version = "0.1.0"
description = "Corporate financial report discovery and update engine"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28",
    "pyyaml>=5.4",
    "fastapi>=0.100",
    "uvicorn>=0.20",
]

[project.scripts]
cfm = "corp_finance_monitor.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/corp_finance_monitor"]

[tool.uv]
managed = true

[dependency-groups]
dev = ["ruff>=0.15.15"]

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = [".venv", "dist", ".git", "__pycache__", "wheelhouse", "data", ".claude/**"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "SIM",
    "C4",
    "UP",
    "RUF",
]
ignore = [
    "E501",
    "B027",
    "RUF001",
    "RUF002",
    "RUF003",
]

[tool.ruff.lint.isort]
known-first-party = ["corp_finance_monitor"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
